<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RandomWallz</string>
    <string name="timer_dialog_title">Wallpaper change interval</string>
    <string name="configuration_dialog_title">Configuration</string>
    <string name="search_empty_error">Search term cannot be empty</string>
    <string name="image_saved_toast">Image saved</string>
    <string name="image_not_saved_toast">Image not saved</string>
    <string name="save_wallpaper_label">Save current wallpaper</string>
    <string name="safe_mode_label">Safe mode</string>
    <string name="search_term_hint_label">Search term</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="refresh_content_description">Refresh</string>
    <string name="unable_set_wallpaper_toast">Unable to set wallpaper</string>
    <string name="unable_retrieve_wallpaper">Unable to retrieve wallpaper</string>
</resources>