<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/search_term"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_term_hint_label" >
        </EditText>

        <ToggleButton
            android:id="@+id/safe_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOff="@string/safe_mode_label"
            android:textOn="@string/safe_mode_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="saveWallpaper"
            android:textSize="14sp"
            android:singleLine="true"
            android:text="@string/save_wallpaper_label" />

        <Spinner
            android:id="@+id/timer_interval"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/timer_entries"
            android:entryValues="@array/timer_values"
            android:prompt="@string/timer_dialog_title"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="cancel"
            android:text="@string/cancel_label" />

        <Button
            android:id="@+id/save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="save"
            android:text="@string/save_label" />
    </LinearLayout>

</LinearLayout>